Correct position of ga-swissimage on mobile

--- a/src/components/backgroundselector/style/backgroundselector-sigeom.less
+++ b/src/components/backgroundselector/style/backgroundselector-sigeom.less
@@ -71,6 +71,11 @@
         background-image: data-uri('DTM_2011.png');
         background-size: 38px 38px;
       }
+
+      .ga-swissimage {
+        .translate3d(0, 0, 0);
+        -ms-transform: translateY(0); /* IE 9*/
+      }
     }
   }
 
